<resources>
    <string name="app_name">UpUpHere</string>
    <string name="logo">Logo</string>

    <!-- title -->
    <string name="create_post_title">Create a post</string>

    <string name="search_hint">Search</string>
    <string name="login_hint">Email or Username</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">Login</string>
    <string name="direct_to_sign_up">Don\'t have account? Sign Up</string>

    <string name="phone_number_hint">Enter your Phone Number</string>
    <string name="OTP_hint">Enter 6-digit number</string>
    <string name="send_otp_button">Send OTP</string>
    <string name="verify_button">Verify Now</string>
    <string name="resend_button">Resend</string>

    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_instruction">Create an account to join the community</string>
    <string name="login_title">Welcome back!</string>
    <string name="login_instruction">Sign in to your account</string>

    <string name="set_email_hint">Set your email</string>
    <string name="set_username_hint">Choose Username</string>
    <string name="set_password_hint">Set your password</string>
    <string name="reenter_password_hint">Re-Enter your password</string>
    <string name="create_account_text">Create Account</string>
    <string name="redirect_sign_in">Already have an account?   Login</string>
    <string name="skip_for_now">Skip</string>
    <string name="sign_up_term">By signing up,you agree to our</string>
    <string name="term_and_policy">Terms of Use and Privacy Policy</string>
    <string name="term_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="logut_button_text">Logout</string>

    <string name="tell_us_about_yourself">Tell us something about yourself</string>
    <string name="what_gender">What\'s your gender?</string>
    <string name="gender_explain">Cause Male and Female see the different world</string>

    <string name="set_your_birthday">Your birthday</string>
    <string name="birthday_explain">Providing your date of birth help us confirm that you have the right to use UpUpHere services and help us personalize your in app experience.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="rather_not_to_say">I rather not to say</string>

    <string name="choose_topic">Choose topic you interested</string>

    <string name="sign_up_to_create_post">Sign up to connect to the world</string>
    <string name="add_group">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>

    <string name="up_vote">UpVote</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>

    <string name="room_name_hint">Give this room an interesting name</string>

    <!--Content description-->
    <string name="content_description">Image</string>
    <string name="content_description_end_icon">Edit text icon</string>
    <string name="more_content_description">More Option</string>
    <string name="loading_content_description">Loading</string>
    <string name="choose_image_button">Choose an image for your post</string>
    <string name="chosen_image_description">Image you chosen</string>
    <string name="choose_image_for_room">Choose an image to create room</string>
    <string name="chosen_image_for_room">Chosen image for your room</string>
    <string name="amount_of_notification">Amount of notification</string>
    <string name="post_image_description">Image of a particular post</string>
    <string name="room_image_description">Image present a particular room</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_photo_from_album">Choose from Album</string>
    <string name="cancel">Cancel</string>

    <string name="create">CREATE</string>
    <string name="delete">Delete</string>
    <string name="post">POST</string>
    <string name="comment_hint">Comment...</string>

    <string name="photo">Photo/Video</string>
    <string name="link">Link</string>
    <string name="location">Location</string>

    <string name="delete_this_photo">Delete this photo?</string>
    <string name="crete_post_hint">What\'s in your mind?</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_instruction">Enter email address of your account</string>
    <string name="your_email">Your email</string>
    <string name="reset_password_button">Send a password reset link</string>

    <string name="email_not_registered">Email is not registered</string>
    <string name="unknown_error">Unknown error</string>
    <string name="verified_phone_number_failed">Failed to verified phone number</string>
    <string name="password_reset_email_sent">Password reset email sent! Please check your email.</string>
    <string name="use_phone_to_reset_password">Use phone number instead?</string>

    <string name="set_new_password">Set your new password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm">Confirm</string>

    <string name="successfully_reset_password">Successfully reset password</string>
    <string name="failed_reset_password">Failed to reset password.Try again later</string>

    <string name="phone">Phone</string>
    <string name="verify_phone_number_button">Verify your phone number</string>
    <string name="six_digit_code">Enter the 6-digit code we sent to</string>
    <string name="resend">Re-send Code</string>
    <string name="didnt_receive_code">Didn\'t receive any code?</string>

    <string name="verify_phone_number">Verify your phone number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_phone_number_reason">In order to avoid spam and give you the best service,please confirm your identity</string>
    <string name="forgot_password_instruction">Enter phone number of your account</string>
    <string name="continue_process">Continue</string>
    <string name="proceed_to_sign_up">Proceed to Sign Up</string>
    <string name="phone_number_verify_success">Successfully verify your phone number</string>
    <string name="continue_to_reset_password">Continue to Reset password</string>
    <string name="phone_number_registered">Phone number already registered.Login instead?</string>
    <string name="phone_number_not_registered">Phone number not existed.Please enter the correct phone number</string>
    <string name="try_again">Try again</string>
    <string name="login_instead">Login instead?</string>

    <string name="default_notification_channel_id">DISCOUNT AND DEALS</string>
    <string name="discussion_channel">Discussion You Join</string>
    <string name="fcm_message">FCM TESTING</string>

    <string name="view_photo">View all your photos and videos here</string>
    <string name="granted_access">Grant access</string>

    <string name="notification">Notification</string>
    <string name="empty_state_post">Be the first one to start discussion!</string>
    <string name="empty_state_comment">Be first to comment to start conversation!</string>
    <string name="empty_state_notification">No notification at the moment.</string>
    <string name="empty_state_single_post">Oops! Post Not found</string>
    <string name="empty_state_room">Wow! Is empty.</string>

    <string name="unhide">Unhide</string>
    <string name="unblock_room">Unblock</string>

    <string name="block_user">Block user</string>
    <string name="hide">Hide</string>
    <string name="report">Report</string>

    <string name="post_success_hide">Post already hided</string>
    <string name="user_success_block">User already block</string>
    <string name="user_success_report">Successfully report user</string>

    <string name="undo">Undo</string>

    <string name="welcome_text">Tap \"Agree and continue\" to use UpUpHere</string>
    <string name="agree_continue">Agree &amp; Continue</string>

    <string name="unable_to_process_now">Unable to sign up now.Please try again later. If this keep happening,please screenshot this and send to feedback@upuphere.com</string>

    <string name="admob_app_id">ca-app-pub-3213513925256606~8735366142</string>
    <string name="admob_test_ads">ca-app-pub-3940256099942544/2247696110</string>
    <string name="admob_post_fragment_native_ads">ca-app-pub-3213513925256606/5424089326</string>
    <string name="admob_room_fragment_native_ads">ca-app-pub-3213513925256606/8245500265</string>
</resources>
