<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.PhoneAuthenticationActivity">

    <EditText
        android:id="@+id/phoneNumberField"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <EditText
        android:id="@+id/verificationField"
        android:layout_width="251dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/OTP_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
        app:layout_constraintVertical_bias="0.166" />

    <Button
        android:id="@+id/sendOTPbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/detailsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verificationField" />

    <Button
        android:id="@+id/resendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberField" />

</androidx.constraintlayout.widget.ConstraintLayout>