<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="upuphere.com.upuphere.viewmodel.ForgotPasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.ForgotPasswordFragment">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/content_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/reset_password_instruction"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/your_email"
                android:importantForAutofill="no"
                android:inputType="text|textEmailAddress"
                android:text="@={viewmodel.emailAddress}"
                android:afterTextChanged="@{viewmodel::afterEmailChanged}"/>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:alpha="0.5"
                android:background="@color/colorPrimaryDark"
                android:enabled="false"
                android:onClick="@{viewmodel::onResetPasswordButtonClick}"
                android:text="@string/reset_password_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/background_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"/>
        </LinearLayout>
    </RelativeLayout>

</layout>