<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="upuphere.com.upuphere.ui.onboardquestion.OnBoardingViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.onboardquestion.PreferencesFragment">

        <Button
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:textColor="@color/dark_grey"
            android:text="@string/skip_for_now" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/skipButton"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="bold"
                android:text="@string/choose_topic" />


            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:background="@drawable/pill_background"
                android:fontFamily="@font/open_sans"
                android:onClick="@{viewModel::onPreferencesNextButtonClicked}"
                android:text="Next"
                android:contentDescription="@string/create_account_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</layout>